Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-6556

changelog catalog corruption if all possible records is define

XMLWordPrintable

    • 3
    • 9223372036854775807

      After our last lustre upgrade, On tera100 and tgcc site, some
      lustre fs have meet the same corruption on the changelog_catalog
      The robinhood node panic like in the LU-6471 and the crash analyze
      show that is the changelog-catalog file that have a corruption.
      The file is too big than the maximum size of this type of file and
      the record who produces the panic is not in the right place.

            bfaccini Bruno Faccini (Inactive)
            apercher Antoine Percher
            Votes:
            0 Vote for this issue
            Watchers:
            18 Start watching this issue

              Created:
              Updated:
              Resolved: